--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <title>Frontend Mentor | Expenses chart component</title>
   </head>
-  <body>
+  <body onresize="responsiveFont()">
     <main>
       <div class="content-wrapper">
         <div class="balance">
